@@ -9,6 +9,8 @@
     :license: BSD, see LICENSE for details.
 """
 
+import sys
+
 import pytest
 from test_ext_autodoc import do_autodoc
 
@@ -37,5 +39,33 @@ def test_autoattribute_novalue(app):
         '   :module: target',
         '',
         '   should be documented -- süß',
+        '',
+    ]
+
+
+@pytest.mark.skipif(sys.version_info < (3, 6), reason='python 3.6+ is required.')
+@pytest.mark.sphinx('html', testroot='ext-autodoc')
+def test_autoattribute_typed_variable(app):
+    actual = do_autodoc(app, 'attribute', 'target.typed_vars.Class.attr2')
+    assert list(actual) == [
+        '',
+        '.. py:attribute:: Class.attr2',
+        '   :module: target.typed_vars',
+        '   :type: int',
+        '',
+    ]
+
+
+@pytest.mark.skipif(sys.version_info < (3, 6), reason='python 3.6+ is required.')
+@pytest.mark.sphinx('html', testroot='ext-autodoc')
+def test_autoattribute_instance_variable(app):
+    actual = do_autodoc(app, 'attribute', 'target.typed_vars.Class.attr4')
+    assert list(actual) == [
+        '',
+        '.. py:attribute:: Class.attr4',
+        '   :module: target.typed_vars',
+        '   :type: int',
+        '',
+        '   attr4',
         '',
     ]
